objects/Hold_Per_Day__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Holds Per Day</relationshipLabel>
        <relationshipName>Holds_Per_Day</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Played__c</fullName>
        <label>Amount Played</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Won__c</fullName>
        <label>Amount Won</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Holds Per Day</relationshipLabel>
        <relationshipName>Holds_Per_Day</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Credits__c</fullName>
        <label>Current Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cycle__c</fullName>
        <formula>Amount_Played__c  /  Funds_In__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cycle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Bt_Most_Recent_HPD_and_12_Mths__c</fullName>
        <description>Allows us to figure out TTM Averages in SOQL using the data available as opposed to calendar time.</description>
        <formula>/**
 *  @TODO note how to account for days the location is not open?
 *
 *  Note 365 would not pull enough data (it would only pull 350) not sure why? some business rule I&apos;m missing?
 *
 *  IF RT is monthly (ie account)
 *    Return True if the date on the hpd record is within 11 months of the most recent hpd record on the account. (not adding 12 seemed to return 13?
 *  IF RT is daily (ie asset)
 *    Return true if the date on the hpd record is within 380 days of the most recent hpd record on the account.
 *
 *  @see HpdSvc.class (Used in nightly aggregation of hpd data)
 */
IF(  LOWER(RecordType.Name) = &apos;monthly hpd&apos;,
        Date__c &gt;= ADDMONTHS(  Account__r.Most_Recent_Hold_Per_Day__r.Date__c,-11),
          Date__c &gt;= $CustomMetadata.HPD_Total_Setting__mdt.HPD_Asset_Aggregation.Last_Daily_HPD_Upload_Date__c  - 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Bt Most Recent HPD and 12 Mths</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Bt_Most_Recent_HPD_and_1_Mth__c</fullName>
        <description>Allows us to figure out 4 week Averages in SOQL using the data available as opposed to calendar time.</description>
        <formula>/**
 *  @TODO note how to account for days the location is not open?
 *
 *  IF RT is monthly (ie account)
 *    Return True if the month and the year on the hpd record is the same as the most recent hpd date on the account
 *  IF RT is daily (ie asset)
 *    Return true if the date on the hpd record is within 30 days of the the custom meta data setting indicating the last time daily hpd data was uploaded
 *
 *  note: Used MONTH and YEAR comparison for Monthlies as it seemed to be grabbing 2 months otherwise. 
 *  @see HpdSvc.class (Used in nightly aggregation of hpd data)
 */
IF(  LOWER(RecordType.Name) = &apos;monthly hpd&apos;,
          AND( MONTH(Date__c) = MONTH(Account__r.Most_Recent_Hold_Per_Day__r.Date__c),
               YEAR(Date__c) = YEAR(Account__r.Most_Recent_Hold_Per_Day__r.Date__c)),
      Date__c &gt;= $CustomMetadata.HPD_Total_Setting__mdt.HPD_Asset_Aggregation.Last_Daily_HPD_Upload_Date__c  - 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Bt Most Recent HPD and 1 Mth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Bt_Most_Recent_HPD_and_2_Mths__c</fullName>
        <description>Allows us to figure out 8 week Averages in SOQL using the data available as opposed to calendar time.</description>
        <formula>/**
 *  @TODO note how to account for days the location is not open?
 *
 *  IF RT is monthly (ie account)
 *    Return True if the date on the hpd record is within 2 months of the most recent hpd record on the account.
 *  IF RT is daily (ie asset)
 *    Return true if the date on the hpd record is within 60 days of the most recent hpd record on the account.
 *
 *  @see HpdSvc.class (Used in nightly aggregation of hpd data)
 */
IF(  LOWER(RecordType.Name) = &apos;monthly hpd&apos;,
        Date__c &gt;= ADDMONTHS(  Account__r.Most_Recent_Hold_Per_Day__r.Date__c,-1),
           Date__c &gt;= $CustomMetadata.HPD_Total_Setting__mdt.HPD_Asset_Aggregation.Last_Daily_HPD_Upload_Date__c  - 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Bt Most Recent HPD and 2 Mths</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Bt_Most_Recent_HPD_and_3_Mths__c</fullName>
        <description>Allows us to figure out 12 week Averages in SOQL using the data available as opposed to calendar time.</description>
        <formula>/**
 *  @TODO note how to account for days the location is not open?
 *
 *  IF RT is monthly (ie account)
 *    Return True if the date on the hpd record is within 3 months of the most recent hpd record on the account.
 *  IF RT is daily (ie asset)
 *    Return true if the date on the hpd record is within 90 days of the most recent hpd record on the account.
 *
 *  @see HpdSvc.class (Used in nightly aggregation of hpd data)
 */
IF(  LOWER(RecordType.Name) = &apos;monthly hpd&apos;,
        Date__c &gt;= ADDMONTHS(  Account__r.Most_Recent_Hold_Per_Day__r.Date__c,-2),
           Date__c &gt;= $CustomMetadata.HPD_Total_Setting__mdt.HPD_Asset_Aggregation.Last_Daily_HPD_Upload_Date__c  - 90)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Bt Most Recent HPD and 3 Mths</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_LTE_Acct_Most_Recent_HPD__c</fullName>
        <description>Used to get around SFDCs lame inability to compare 2 fields in SOQL</description>
        <formula>Date__c &lt;= Account__r.Most_Recent_Hold_Per_Day__r.Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date on this HPD record is less then or equal to the date on the accounts most recent HPD.</inlineHelpText>
        <label>Date LTE Acct Most Recent HPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_of_Week__c</fullName>
        <formula>CASE( MOD( Date__c - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_in_Month__c</fullName>
        <formula>/**
 * Used in HPD Total aggregation for monthly hpds / location aggregation
 *
 */
28 + MOD(( Month_n__c  + FLOOR(Month_n__c /8)), 2) + MOD(2, Month_n__c ) + 2 * FLOOR(1/Month_n__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funds_In__c</fullName>
        <label>Funds In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funds_Out__c</fullName>
        <label>Funds Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Games_Played__c</fullName>
        <label>Games Played</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPD__c</fullName>
        <label>HPD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Include_in_YOY__c</fullName>
        <formula>If( Month_n__c &lt; 10, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include in YOY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Share__c</fullName>
        <formula>IF(Date__c &gt;= DATE(2020,7,1), ( Funds_In__c -  Funds_Out__c ) *0.3257, (IF(Date__c &gt;= DATE(2019,7,1), ( Funds_In__c -  Funds_Out__c ) *0.3314, ( Funds_In__c -  Funds_Out__c ) *0.3464)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Machine_Location_Type__c</fullName>
        <label>Machine Location Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Model__c</fullName>
        <label>Machine Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Type__c</fullName>
        <label>Metric Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Statewide90DAverage</fullName>
                </value>
                <value>
                    <fullName>Statewide90DAveragePrevYear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE(MONTH(Date__c), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_n__c</fullName>
        <formula>CASE(MONTH(Date__c), 1, 1, 2, 2, 3, 3,  4, 4,  5, 5,  6, 6, 7, 7, 8, 8, 9, 9, 10, 10, 11, 11, 12, 12, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month(n)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Municipality_Share__c</fullName>
        <label>Municipality Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NTI_Tax_Rate_30__c</fullName>
        <label>NTI Tax Rate (30%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NTI__c</fullName>
        <label>NTI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Funds__c</fullName>
        <formula>Funds_In__c - Funds_Out__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Revenue__c</fullName>
        <formula>Funds_In__c -  Funds_Out__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Wager__c</fullName>
        <label>Net Wager</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Portal_Dummy_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A demo account.</description>
        <inlineHelpText>A demo account.</inlineHelpText>
        <label>Portal Dummy Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Share__c</fullName>
        <label>State Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VGT_Count__c</fullName>
        <label>VGT Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Hold Per Day</label>
    <listViews>
        <fullName>Ach_n_Lou_s</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>VGT_Count__c</columns>
        <columns>Asset__c</columns>
        <columns>Amount_Played__c</columns>
        <columns>Amount_Won__c</columns>
        <columns>Funds_In__c</columns>
        <columns>Funds_Out__c</columns>
        <columns>NTI__c</columns>
        <columns>Location_Share__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>ACH-N-LOU&apos;S</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day__c.Monthly_HPD</value>
        </filters>
        <label>Ach-n-Lou’s</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>VGT_Count__c</columns>
        <columns>Date__c</columns>
        <columns>HPD__c</columns>
        <columns>Asset__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day__c.Daily_Aggregate</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>3/1/2019</value>
        </filters>
        <label>All Daily HPD</label>
    </listViews>
    <listViews>
        <fullName>All_Demo_HPD</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>VGT_Count__c</columns>
        <columns>Date__c</columns>
        <columns>HPD__c</columns>
        <columns>Asset__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Portal_Dummy_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Demo HPD</label>
    </listViews>
    <listViews>
        <fullName>All_Monthly_HPD</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>VGT_Count__c</columns>
        <columns>Month_n__c</columns>
        <columns>Date__c</columns>
        <columns>HPD__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day__c.Monthly_HPD</value>
        </filters>
        <label>All Monthly HPD</label>
    </listViews>
    <listViews>
        <fullName>All_Monthly_HPD_JAKES</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>VGT_Count__c</columns>
        <columns>Month_n__c</columns>
        <columns>Date__c</columns>
        <columns>HPD__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day__c.Monthly_HPD</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>JAKES</value>
        </filters>
        <label>All Monthly HPD JAKES</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_All_Monthly_2ND_STREET_SLOTS</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>VGT_Count__c</columns>
        <columns>Month_n__c</columns>
        <columns>Date__c</columns>
        <columns>HPD__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day__c.Monthly_HPD</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>ALL-INN</value>
        </filters>
        <label>Copy of All Monthly 2ND STREET SLOTS</label>
    </listViews>
    <listViews>
        <fullName>Fox_Today</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Amount_Played__c</columns>
        <columns>Amount_Won__c</columns>
        <columns>NTI__c</columns>
        <columns>Funds_In__c</columns>
        <columns>Funds_Out__c</columns>
        <columns>Net_Revenue__c</columns>
        <columns>Location_Share__c</columns>
        <columns>Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>State_Share__c</columns>
        <columns>Asset__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>Gold Star</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>SLOTS OF FUN</value>
        </filters>
        <label>Gold Star</label>
    </listViews>
    <listViews>
        <fullName>Nov_Daily_HPDs</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>VGT_Count__c</columns>
        <columns>Month_n__c</columns>
        <columns>Date__c</columns>
        <columns>HPD__c</columns>
        <columns>Asset__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day__c.Daily_HPD</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>9/30/2018</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>lessThan</operation>
            <value>12/1/2018</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>103 East</value>
        </filters>
        <label>OCT and NOV Daily HPDs</label>
    </listViews>
    <listViews>
        <fullName>SPEEDWAY_7422_Monthly_HPD</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>VGT_Count__c</columns>
        <columns>Month_n__c</columns>
        <columns>Date__c</columns>
        <columns>HPD__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day__c.Monthly_HPD</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>SPEEDWAY #7422</value>
        </filters>
        <label>SPEEDWAY #7422 Monthly HPD</label>
    </listViews>
    <listViews>
        <fullName>Todays</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>HPD__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Account__c</columns>
        <columns>Asset__c</columns>
        <columns>Net_Funds__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day__c.Daily_Aggregate</value>
        </filters>
        <label>Todays</label>
    </listViews>
    <listViews>
        <fullName>Todays_Daily_Aggregate</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day__c.Daily_Aggregate</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays Daily Aggregate</label>
    </listViews>
    <listViews>
        <fullName>Todays_RAW</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>HPD__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Account__c</columns>
        <columns>Asset__c</columns>
        <columns>Net_Funds__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day__c.Daily_HPD</value>
        </filters>
        <label>Todays - RAW</label>
    </listViews>
    <listViews>
        <fullName>X160701700_Daily_HPD</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>VGT_Count__c</columns>
        <columns>Month_n__c</columns>
        <columns>Date__c</columns>
        <columns>HPD__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day__c.Daily_HPD</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Doghouse on Beach</value>
        </filters>
        <label>#160701700 Daily HPD</label>
    </listViews>
    <listViews>
        <fullName>X160701700_Monthly_HPD</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>VGT_Count__c</columns>
        <columns>Month_n__c</columns>
        <columns>Date__c</columns>
        <columns>HPD__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day__c.Monthly_HPD</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Doghouse on Beach</value>
        </filters>
        <label>#160701700 Monthly HPD</label>
    </listViews>
    <listViews>
        <fullName>X2ND_STREET_SLOTS_HPD</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Date__c</columns>
        <columns>Asset__c</columns>
        <columns>Funds_In__c</columns>
        <columns>Funds_Out__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>THE NOOK</value>
        </filters>
        <filters>
            <field>Funds_In__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Hold_Per_Day__c.Daily_HPD</value>
        </filters>
        <label>THE NOOK Zero Days</label>
    </listViews>
    <nameField>
        <displayFormat>HPD-{000000000}</displayFormat>
        <label>Hold Per Day Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holds Per Day</pluralLabel>
    <recordTypes>
        <fullName>Daily_Aggregate</fullName>
        <active>true</active>
        <description>Rollup of machine raw values into single record per account</description>
        <label>Daily Aggregate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Daily_HPD</fullName>
        <active>true</active>
        <label>Daily HPD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Model_Metric</fullName>
        <active>true</active>
        <description>Rollup Information about a specific cabinet</description>
        <label>Model Metric</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monthly_HPD</fullName>
        <active>true</active>
        <label>Monthly HPD</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>